--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,8 +12,23 @@
     tools:context="com.example.acerpc.memecreator.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
+    <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:name="com.example.acerpc.memecreator.TopSectionFragment"
+        android:id="@+id/fragment"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        tools:layout="@layout/top_section_fragment" />
+
+    <fragment
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:name="com.example.acerpc.memecreator.BottomSectionFragment"
+        android:id="@+id/fragment2"
+        tools:layout="@layout/bottom_section_fragment"
+        android:layout_below="@+id/fragment"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        />
 </RelativeLayout>
