--- a/app/src/main/res/layout/top_section_fragment.xml
+++ b/app/src/main/res/layout/top_section_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/topTextInput">
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <EditText
         android:layout_width="wrap_content"
@@ -32,6 +31,6 @@
         android:text="Create meme vella"
         />
 
-    
+
     
 </RelativeLayout>
